[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugtriage-openenv"
version = "1.0.0"
description = "OpenEnv environment for software bug triage — classify, route, escalate, and resolve"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.1",
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.11.0",
    "requests>=2.32.3",
    "openai>=1.57.4",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "httpx>=0.28.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*"]
